--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <p><i class="fas fa-paper-plane"></i> deepikamahadevan01@gmail.com</p>
                 <p><i class="fas fa-phone-square-alt"></i> (+91) 93847 66120</p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="fab fa-twitter-square"></i><img src="https://icons8.com/icon/8808/linkedin" alt=""></a>
+                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"></i><img src="/images/icon.png" alt=""><i class="fab fa-twitter-square"></a>
                     <a href="https://github.com/deepikabai" target="_blank"><i class="fab fa-linkedin"></i><img src="/images/icon-2.png" alt=""></a>
                     
                 </div>
