--- a/index.html
+++ b/index.html
@@ -124,12 +124,9 @@
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fas fa-paper-plane"></i> deepikamahadevan01@gmail.com</p>
                 <p><i class="fas fa-phone-square-alt"></i> (+91) 93847 66120</p>
-                <p align="left">
-                     <a href="https://linkedin.com/in/https://www.linkedin.com/in/deepika-bai" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" alt="https://www.linkedin.com/in/deepika-bai" height="30" width="40" /></a>
-                    </p>
                 <div class="social-icons">
-                    
-<!--                     <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="fab fa-twitter-square"></i><img src="/images/icon.png" alt=""></a> -->
+                    <img src="/images/icon.png" alt="">
+                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="fab fa-twitter-square"></i><img src="/images/icon.png" alt=""></a>
                     <a href="https://github.com/deepikabai" target="_blank"><i class="fab fa-linkedin"></i><img src="/images/icon-2.png" alt=""></a>
                     
                 </div>
