--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
                 <p><i class="fas fa-phone-square-alt"></i> (+91) 93847 66120</p>
                 <div class="social-icons">
                     <img src="/images/icon.png" alt="">
-                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="https://www.linkedin.com/in/deepika-bai"></i><img src="/images/icon.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="https://www.linkedin.com/in/deepika-bai"></i></a>
 <!--                     <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="fab fa-twitter-square"></i><img src="/images/icon.png" alt=""></a> -->
-                    <img src="/images/icon-2.png" alt="">
                     <a href="https://github.com/deepikabai" target="_blank"><i class="fab fa-linkedin"></i><img src="/images/icon-2.png" alt=""></a>
                     
                 </div>
