--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
                 <p><i class="fas fa-paper-plane"></i> deepikamahadevan01@gmail.com</p>
                 <p><i class="fas fa-phone-square-alt"></i> (+91) 93847 66120</p>
                 <div class="social-icons">
-                    <img src="/images/icon.png" alt="">
-                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="https://www.linkedin.com/in/deepika-bai"><img src="/images/icon.png" alt=""></i></a>
+                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="<i class="fa-brands fa-linkedin"></i>"></i></a>
 <!--                     <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="fab fa-twitter-square"></i><img src="/images/icon.png" alt=""></a> -->
                     <a href="https://github.com/deepikabai" target="_blank"><i class="fab fa-linkedin"></i><img src="/images/icon-2.png" alt=""></a>
                     
