--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <p><i class="fas fa-paper-plane"></i> deepikamahadevan01@gmail.com</p>
                 <p><i class="fas fa-phone-square-alt"></i> (+91) 93847 66120</p>
                 <div class="social-icons">
-                    <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/228BE6/linkedin.png" alt="linkedin"/>
-<!--                     <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><i class="fa-brands fa-linkedin"></i></a> -->
+                    
+                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/228BE6/linkedin.png" alt="linkedin"/></a>
                     <a href="https://github.com/deepikabai" target="_blank"><i class="fa-brands fa-github"></i></a>
                     
                 </div>
