--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fas fa-paper-plane"></i> deepikamahadevan01@gmail.com</p>
+                <p><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/ff004f/apple-phone.png" alt="apple-phone"/> deepikamahadevan01@gmail.com</p>
                 <p><i class="fas fa-phone-square-alt"></i> (+91) 93847 66120</p>
                 <div class="social-icons">
                     
