--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ff004f/new-post.png" alt="new-post"/> deepikamahadevan01@gmail.com</p>
-                <p><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/ff004f/new-post.png" alt="new-post"/> (+91) 93847 66120</p>
+                <p><img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ff004f/apple-phone.png" alt="apple-phone"/> (+91) 93847 66120</p>
                 <div class="social-icons">
                     
                     <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/228BE6/linkedin.png" alt="linkedin"/></a>
