--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="social-icons">
                     
                     <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/228BE6/linkedin.png" alt="linkedin"/></a>
-                    <a href="https://github.com/deepikabai" target="_blank"><img width="48" height="48" src="https://img.icons8.com/external-tal-revivo-bold-tal-revivo/48/228BE6/external-github-with-cat-logo-an-online-community-for-software-development-logo-bold-tal-revivo.png" alt="external-github-with-cat-logo-an-online-community-for-software-development-logo-bold-tal-revivo"/></a>
+                    <a href="https://github.com/deepikabai" target="_blank"><img width="48" height="48" src="https://img.icons8.com/glyph-neue/48/40C057/github.png" alt="github"/></a>
                     
                 </div>
                 <a href="images/Deepika-profile.pdf" download class="btn btn2">Download CV</a>
