--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ff004f/new-post.png" alt="new-post"/> deepikamahadevan01@gmail.com</p>
+                <p><img width="24" height="24" src="https://img.icons8.com/material/24/ff004f/new-post--v1.png" alt="new-post--v1"/> deepikamahadevan01@gmail.com</p>
                 <p><img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ff004f/apple-phone.png" alt="apple-phone"/> (+91) 93847 66120</p>
                 <div class="social-icons">
                     
