--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><img width="24" height="24" src="https://img.icons8.com/material/24/ff004f/new-post--v1.png" alt="new-post--v1"/>     deepikamahadevan01@gmail.com</p>
-                <p><img width="24" height="24" src="https://img.icons8.com/ios-filled/30/ff004f/apple-phone.png" alt="apple-phone"/>     (+91) 93847 66120</p>
+                <p><img width="24" height="24" src="https://img.icons8.com/material/24/ff004f/new-post--v1.png" alt="new-post--v1"/>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;deepikamahadevan01@gmail.com</p>
+                <p><img width="24" height="24" src="https://img.icons8.com/ios-filled/50/ff004f/apple-phone.png" alt="apple-phone"/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(+91) 93847 66120</p>
                 <div class="social-icons">
                     
-                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/228BE6/linkedin.png" alt="linkedin"/></a>
-                    <a href="https://github.com/deepikabai" target="_blank"><img width="50" height="50" src="https://img.icons8.com/glyph-neue/48/40C057/github.png" alt="github"/></a>
+                    <a href="https://www.linkedin.com/in/deepika-bai" target="_blank"><img width="68" height="68" src="https://img.icons8.com/ios-filled/50/228BE6/linkedin.png" alt="linkedin"/></a>
+                    <a href="https://github.com/deepikabai" target="_blank"><img width="68" height="68" src="https://img.icons8.com/glyph-neue/48/40C057/github.png" alt="github"/></a>
                     
                 </div>
                 <a href="images/Deepika-profile.pdf" download class="btn btn2">Download CV</a>
